--- a/gallery.html
+++ b/gallery.html
@@ -63,7 +63,7 @@ input[type=button]
 </div>
 <br/>
 <div align="center">
-	<a href="home.html"><input type="button" name="back" value="Back to Home"></a>
+	<a href="index.html"><input type="button" name="back" value="Back to Home"></a>
 	
 </div>
 </body>
